--- a/server/db/.env
+++ b/server/db/.env
@@ -1,1 +1,1 @@
-DB = 'mongodb+srv://ketanthakur603:ketan@2003@products.ock7o.mongodb.net/?retryWrites=true&w=majority&appName=products'
+DB = mongodb+srv://ketanthakur603:ketan@2003@products.ock7o.mongodb.net/?retryWrites=true&w=majority&appName=products
